# pybundler

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/filebundler/: __init__.py  cli.py  defaults.py  unbundler.py
src/pybundler/: __init__.py  bundler.py  cli.py  defaults.py  unbundler.py
