# setup.cfg
[metadata]
# Name, version, author etc. are now defined in pyproject.toml project table

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = # Dependencies are defined in pyproject.toml project table

[options.packages.find]
where = src
exclude = # Optional: Exclude specific packages if needed
    # tests*

# Optional: Specify console script entry point also here for compatibility
# Although project.scripts in pyproject.toml is preferred
# [options.entry_points]
# console_scripts =
#     filebundler = filebundler.cli:main # Updated reference